⚠️ WIP Actually commit something

--- a/CarpHask.cabal
+++ b/CarpHask.cabal
@@ -36,6 +36,7 @@ library
                        Info,
                        InitialTypes,
                        Interfaces,
+                       Json,
                        Managed,
                        Map,
                        Memory,
@@ -50,6 +51,7 @@ library
                        Qualify,
                        Reify,
                        RenderDocs,
+                       RenderBuildInfo,
                        Repl,
                        Set,
                        Scoring,
