Add file to .cabal modules

--- a/CarpHask.cabal
+++ b/CarpHask.cabal
@@ -19,6 +19,7 @@ library
   exposed-modules:     ArrayTemplates,
                        AssignTypes,
                        BoxTemplates,
+                       BuildInfo,
                        ColorText,
                        Commands,
                        Concretize,
@@ -51,7 +52,6 @@ library
                        Qualify,
                        Reify,
                        RenderDocs,
-                       RenderBuildInfo,
                        Repl,
                        Set,
                        Scoring,
